# audioscout-fork

./: CMakeLists.txt  ChangeLog.txt  README.md  README.txt  audiodb.sql  build_AudioScout.sh
clients/: CMakeLists.txt  MeterWidget.cpp  MeterWidget.h  SendThread.cpp  SendThread.h  auscout-client-main.cpp  auscout-client-main.pro  auscout-client.c  auscout-gui  mainwindow.cpp  mainwindow.h
docs/: audioscout.dot  audioscout.eps  audioscoutm.aux  audioscoutm.tex  mdperfthreads.eps  mdperfthreads2.eps  mdperfthruput.eps  tblperfthreads.eps  tblperfthruput.eps
libs/: CMakeLists.txt  README.txt  audio_index.c  audiodata.c  audiodata.h  complex.h  fft.c  fft.h  pHashAudioConfig.h.in  phash_audio.c  phash_audio.h  phcomplex.c  phcomplex.h  serialize.h  zmqhelper.h
libs/bindings/csharp/: CMakeLists.txt  README.txt  TestNI.cs  audiodata.cs  phashaudio.cs
libs/bindings/java/: CMakeLists.txt  README  build.xml  org_phash_AudioHash.cpp  org_phash_AudioHash.h
libs/bindings/java/src-auscoutclient/org/phash/phashaudio/: AudioScoutClient.java
libs/bindings/java/tests/org/phash/: TestAudio.java
libs/table-4.3.0phmodified/: CMakeLists.txt  TableConfig.h.in  table.c  table.h  table_loc.h  table_t.c
servers/: CMakeLists.txt  auscout.c  metadatadb.c  table_server.c
tests/: CMakeLists.txt  auscout-driver.c  auscout-sink.c  auscout.cs  metadatadb_client.c  metadatadb_driver.c  retrieve_client.c  tblserver_driver.c  test_audiodata.c  test_index.c  testaudiohash.c  testbark.c  testmergeindex.c  testserialize.c
tests/testdir/: amr-1.amr  amr-2.amr
